Fixed button and logo spacing on navbar

--- a/src/css/components/_featurecard.scss
+++ b/src/css/components/_featurecard.scss
@@ -11,9 +11,9 @@
       .content {
         border-radius: _border(rounded_large);
         background-color: _palette(pinklight);
-        // padding: 5rem;
         padding: 2.75rem;
         margin: 1.25rem;
+
         h2 {
           padding-top: 0rem;
           padding-left: 1.75rem;
@@ -25,6 +25,9 @@
           padding-left: 1.75rem;
           padding-top: 0;
           padding-bottom: 0;
+        }
+        .btn__container {
+          @include btnContain(100%);
         }
         button {
           padding: 1.75rem;
