--- a/src/css/layout/_featuregrid.scss
+++ b/src/css/layout/_featuregrid.scss
@@ -1,19 +1,20 @@
 .feature__grid {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(500px, 1fr));
-  grid-gap: 20px;
-  margin-top: 12rem;
+  grid-template-columns: repeat(2, 1fr);
+  margin-top: 3rem;
   margin-bottom: 12rem;
 
   > section {
     display: flex;
+    flex-direction: row;
 
     img {
      width: 100%;
      height: 50%;
      margin-top: 8rem;
-     margin-right: -35px;
+     margin-right: -65px;
      z-index: 999;
+     flex: 1;
     }
   
     .content {
